--- a/_posts/2020-03-04-LOGY.md
+++ b/_posts/2020-03-04-LOGY.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "LOGY（ロジー）"
-description: "新型コロナウイルスに伴う休校対策に、家庭で利用できる子育て支援サービスなどをご紹介します"
+description: "モノづくりとプログラミングが、自宅から学べるオンライン教室。"
 date:   2020-03-04 12:40:00 +0900
 categories: programming
 by: '株式会社Yoki'
@@ -10,4 +10,3 @@ image-url: 'https://www.yoki.inc/assets/logo.png'
 
 ---
 
-ここにコンテンツ
