✨(article): add target tag

--- a/_posts/2020-03-04-LOGY.md
+++ b/_posts/2020-03-04-LOGY.md
@@ -7,6 +7,7 @@ categories: programming
 by: '株式会社Yoki'
 service: 'https://logy.app'
 image-url: 'https://www.yoki.inc/assets/logo.png'
+target: '小学生・中学生'
 
 ---
 
