✨(article): add article

--- a/_posts/2020-03-05-LOGY.md
+++ b/_posts/2020-03-05-LOGY.md
@@ -2,6 +2,7 @@
 layout: post
 title: 'LOGY'
 target: '小学生・中学生'
+format: 'オンライン授業'
 description: 'モノづくりとプログラミングが、自宅から学べるオンライン教室。4月末まで割引実施。'
 date: 2020-03-05 13:39:00 +0900
 categories: programming
@@ -9,4 +10,3 @@ by: '株式会社Yoki'
 service: 'https://logy.app/202003-covid-19?fbclid=IwAR0Lvv4hry_dcC5zQFXQEA8yPXrb1vaWLlR3BD1Rv7iF0kcyDvuSGYhvxo0'
 image-url: 'https://www.yoki.inc/assets/logo.png'
 ---
-モノづくりとプログラミングが、自宅から学べるオンライン教室。4月末まで割引実施。
