--- a/_posts/2020-03-05-科学技術広報研究会 臨時休校対応特別企画.md
+++ b/_posts/2020-03-05-科学技術広報研究会 臨時休校対応特別企画.md
@@ -2,6 +2,7 @@
 layout: post
 title: '科学技術広報研究会 臨時休校対応特別企画'
 target: '全年齢対象'
+format: '動画'
 description: '様々な研究機関に所属する広報担当者が、科学技術に関連する様々なムービーをピックアップ。'
 date: 2020-03-05 13:39:00 +0900
 categories: science
@@ -9,4 +10,3 @@ by: '科学技術広報研究会'
 service: 'https://sites.google.com/view/jacst-for-kids/home'
 image-url: 'https://www.learning-innovation.go.jp/cms/wp-content/uploads/2020/03/jacst-for-kids.png'
 ---
-様々な研究機関に所属する広報担当者が、科学技術に関連する様々なムービーをピックアップ。
