--- a/_posts/2020-03-05-Ｚ会の通信教育の一部の教材を無料公開.md
+++ b/_posts/2020-03-05-Ｚ会の通信教育の一部の教材を無料公開.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 'Ｚ会の通信教育'
+title: 'Ｚ会の通信教育の一部の教材を無料公開'
 target: '小学生・中学生・高校生'
 description: '小学生から大学受験生まで、各学年に適した教材・副学習教材。'
 date: 2020-03-05 13:39:00 +0900
