--- a/_posts/2020-03-05-N予備校.md
+++ b/_posts/2020-03-05-N予備校.md
@@ -2,6 +2,7 @@
 layout: post
 title: 'N予備校'
 target: '高校生'
+format: 'アプリ'
 description: '今の時代の受験勉強スタイルに合わせ、生放送授業・教材全てをスマホに最適化したオールインワンアプリ。3月末まで無償提供。'
 date: 2020-03-05 13:39:00 +0900
 categories: programming
@@ -9,4 +10,3 @@ by: '株式会社ドワンゴ'
 service: 'https://www.nnn.ed.nico/'
 image-url: 'https://www.nnn.ed.nico/pages_assets/images/index/feature/logo-7aaf175200a6b7643a12c35862b02564.png'
 ---
-今の時代の受験勉強スタイルに合わせ、生放送授業・教材全てをスマホに最適化したオールインワンアプリ。3月末まで無償提供。
