--- a/_posts/2020-03-05-シンクシンク.md
+++ b/_posts/2020-03-05-シンクシンク.md
@@ -2,6 +2,7 @@
 layout: post
 title: 'シンクシンク'
 target: '全年齢対象'
+format: 'アプリ'
 description: 'パズルや迷路、図形などを用いた、思考力を楽しく身につけるための知育教材アプリ。3月末まで有料コンテンツをすべて無償提供。'
 date: 2020-03-05 13:39:00 +0900
 categories: games
@@ -9,4 +10,3 @@ by: 'ワンダーラボ株式会社'
 service: 'https://education.hanamarulab.com/2020/03/01/howtouse/'
 image-url: 'https://lh3.googleusercontent.com/proxy/lSOxgFHB7x5It4U4W-1FUlU5dOOyi0RYRnMEQMKAVn2Bo_BmNgXTgv30RK2ngMYLRHXcBvMhI2k3vcw-S1gYard6Xf0YBuyTPJMhmrtknacOKQFvL3USQ6rt9W2oaW7WLNhYCHQRmzECECLpH_dudi57rA'
 ---
-パズルや迷路、図形などを用いた、思考力を楽しく身につけるための知育教材アプリ。3月末まで有料コンテンツをすべて無償提供。
