😍(article): fix image link

--- a/_posts/2020-03-05-シンクシンク.md
+++ b/_posts/2020-03-05-シンクシンク.md
@@ -8,5 +8,5 @@ date: 2020-03-05 13:39:00 +0900
 categories: games
 by: 'ワンダーラボ株式会社'
 service: 'https://education.hanamarulab.com/2020/03/01/howtouse/'
-image-url: 'https://lh3.googleusercontent.com/proxy/lSOxgFHB7x5It4U4W-1FUlU5dOOyi0RYRnMEQMKAVn2Bo_BmNgXTgv30RK2ngMYLRHXcBvMhI2k3vcw-S1gYard6Xf0YBuyTPJMhmrtknacOKQFvL3USQ6rt9W2oaW7WLNhYCHQRmzECECLpH_dudi57rA'
+image-url: 'https://is1-ssl.mzstatic.com/image/thumb/Purple124/v4/b5/f7/bd/b5f7bd3d-3c54-0554-dbbb-5dd6f8e3a3bc/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-85-220.png/230x0w.png'
 ---
